switching to knight theme, previous theme saved under _layouts_default folder, rollback should be as simple as renaming folders

--- a/_layouts_default/services.html
+++ b/_layouts_default/services.html
@@ -15,7 +15,7 @@
                             <div class="services-details">
                                 <div class="single-services">
                                     <a class="services-icon" href="#">
-                                        <i class="fa fa-{{ service.fa-icon }}"></i>
+                                        <i class="fa fa-{{ service.icon }}"></i>
                                     </a>
                                     <h4>{{ service.heading }}</h4>
                                     <p>{{ service.content }}</p>
