--- a/_layouts_default/team.html
+++ b/_layouts_default/team.html
@@ -23,7 +23,7 @@
                                     {% for link in member.links %}
                                     <li>
                                     <a href="{{ link.url }}">
-                                        <i class="fa fa-{{ link.fa-icon }}"></i>
+                                        <i class="fa fa-{{ link.icon }}"></i>
                                     </a>
                                     </li>
                                     {% endfor %}
